Multiple magic-folders
This moves all magic-folder configs to a single YAML
file. We load legacy config fine and don't mess with
legacy config unless you use a magic-folder command that
changes the config.

Increase test coverage

--- a/src/allmydata/web/static/css/new-tahoe.css
+++ b/src/allmydata/web/static/css/new-tahoe.css
@@ -53,6 +53,11 @@ body {
 .connection-status {
 }
 
+.magic-folder-status {
+    clear: left;
+    margin-left: 40px;  /* width of status-indicator + margins */
+}
+
 .furl {
     font-size: 0.8em;
     word-wrap: break-word;
